@@ -1,14 +1,9 @@
 package Apache::Connection;
 
-use strict;
+use Apache ();
 
-use DynaLoader ();
-@Apache::Connection::ISA = qw(DynaLoader);
-$Apache::Connection::VERSION = '1.00';
-
-if ($ENV{MOD_PERL}) {
-    bootstrap Apache::Connection $Apache::Connection::VERSION;
-}
+$VERSION = '1.00';
+__PACKAGE__->mod_perl::boot($VERSION);
 
 1;
 __END__
