@@ -1,14 +1,11 @@
 package Apache::ModuleConfig;
+
 use strict;
-$Apache::ModuleConfig::VERSION = "0.01";
 
-unless(defined &bootstrap) {
-    require DynaLoader;
-    @Apache::ModuleConfig::ISA = qw(DynaLoader);
-}
-
-if($ENV{MOD_PERL}) {
-    __PACKAGE__->bootstrap;
+{
+    no strict;
+    $VERSION = "0.01";
+    __PACKAGE__->mod_perl::boot($VERSION);
 }
 
 sub has_srv_config {
