@@ -3,7 +3,9 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
-- loose @ISA 'DynaLoader' to avoid AutoLoader::AUTOLOAD
+- revisit Apache::File::tmpfile
+
+- PerlRun undef &subroutine bug
 
 - @PerlSetVar core dumps outside of %Location (Ask)
 
